--- a/index.html
+++ b/index.html
@@ -7,26 +7,32 @@
     <title>WebStudio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
     rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Шапка сторінки-->
-    <header>
-        <nav class="navigation">
-            <a class="logo" href="./index.html">Web<span class="logo-nav-word">Studio</span></a>
-
-        <ul class="list">
-            <li class="item"><a class="link-navigation current" href="./">Студия</a></li>
-            <li class="item"><a class="link-navigation" href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a class="link-navigation" href="">Контакты</a></li>
-        </ul>
-        </nav>
-        <a class="link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+    <header class="header-page">
+        <div>
+            <nav class="navigation">
+                <a class="logo" href="./index.html">Web<span class="logo-nav-word">Studio</span></a>
+    
+            <ul class="list">
+                <li class="item"><a class="link-navigation current" href="./">Студия</a></li>
+                <li class="item"><a class="link-navigation" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="link-navigation" href="">Контакты</a></li>
+            </ul>
+            </nav>
+        </div>
+        <div>
+            <a class="link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+        </div>
     </header>
     
-    <main>
+    <main class="main-content">
         <!--Секція Герой-->
         <section class="hero">
             <h1 class="title-hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
@@ -58,7 +64,7 @@
 
         <!--Чим займаємось-фото-->
         <section class="work">
-            <h2 class="title">Чем мы занимаемся</h2>
+            <h2 class="title-work">Чем мы занимаемся</h2>
             <ul class="list">
                 <li class="item"> 
                     <img class="photo" src="./images/our_work/coding.jpg" alt="Верстка веб-сторінки"
@@ -78,7 +84,7 @@
 
         <!--Команда-->
         <section class="team">
-            <h2 class="title">Наша команда</h2>
+            <h2 class="title-our-team">Наша команда</h2>
             <ul class="list">
                 <li class="item">
                     <div class="our-team">
@@ -116,7 +122,7 @@
     </main>
 
     <!--Футер-->
-    <footer>
+    <footer class="ftr-page">
         <a class="logo" href="">Web<span class="logo-word">Studio</span></a>
 
         <address class="location">г. Киев, пр-т Леси Украинки, 26
