--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,14 @@
     <title>WebStudio</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
     rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!--Шапка сторінки Портфоліо-->
-    <header>
+    <header class="header-page">
         <nav class="navigation">
             <a class="logo" href="./index.html">Web<span class="logo-nav-word">Studio</span></a>
     
@@ -26,7 +28,7 @@
         <a class="link-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="link-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-    <main>
+    <main class="main-content">
         <section class="gallery">
             <!--Список кнопок сторінки Портфоліо-->
             <ul class="list">
@@ -53,7 +55,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/tehno-kr.jpg" alt="Веб-сайт для компании Технокряк" 
                         width="370" height="294">
-                        <h2 class="title-work">Технокряк</h2>
+                        <h2 class="title-project">Технокряк</h2>
                         <p class="work-card">Веб-сайт</p>
                     </a>
                 </li>
@@ -61,7 +63,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/poster-new-orlean.jpg" alt="Дизайн постера New Orlean vs Golden Star"
                         width="370" height="294">
-                        <h2 class="title-work">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <h2 class="title-project">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                         <p class="work-card">Дизайн</p>
                     </a>
                 </li>
@@ -69,7 +71,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/seafood.jpg" alt="Приложение для ресторана Seafood" 
                         width="370" height="294">
-                        <h2 class="title-work">Ресторан <span lang="en">Seafood</span></h2>
+                        <h2 class="title-project">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="work-card">Приложение</p>
                     </a>
                 </li>
@@ -77,7 +79,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/project-prime.jpg" alt="Маркетинговый проект Prime" 
                         width="370" height="294">
-                        <h2 class="title-work">Проект <span lang="en">Prime</span></h2>
+                        <h2 class="title-project">Проект <span lang="en">Prime</span></h2>
                         <p class="work-card">Маркетинг</p>
                     </a>
                 </li>
@@ -85,7 +87,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/boxes.jpg" alt="Приложение компании Boxes" 
                         width="370" height="294">
-                        <h2 class="title-work">Проект <span lang="en">Boxes</span></h2>
+                        <h2 class="title-project">Проект <span lang="en">Boxes</span></h2>
                         <p class="work-card">Приложение</p>
                     </a>
                 </li>
@@ -93,7 +95,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/web-inspiration.jpg" alt="Веб-сайт компании Inspiration has no Borders"
                         width="370" height="294">
-                        <h2 class="title-work" lang="en">Inspiration has no Borders</h2>
+                        <h2 class="title-project" lang="en">Inspiration has no Borders</h2>
                         <p class="work-card">Веб-сайт</p>
                     </a>
                 </li>
@@ -101,7 +103,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/edition.jpg" alt="Дизайн для издания Издание Limited Edition" 
                         width="370" height="294">
-                        <h2 class="title-work">Издание <span lang="en">Limited Edition</span></h2>
+                        <h2 class="title-project">Издание <span lang="en">Limited Edition</span></h2>
                         <p class="work-card">Дизайн</p>
                     </a>
                 </li>
@@ -109,7 +111,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/lab.jpg" alt="Маркетинговый проект LAB" 
                         width="370" height="294">
-                        <h2 class="title-work">Проект <span lang="en">LAB</span></h2>
+                        <h2 class="title-project">Проект <span lang="en">LAB</span></h2>
                         <p class="work-card">Маркетинг</p>
                     </a>
                 </li>
@@ -117,7 +119,7 @@
                     <a class="link" href="">
                         <img src="./images/portfolio-img/growing-business.jpg" alt="Приложение Growing Business" 
                         width="370" height="294">
-                        <h2 class="title-work" lang="en">Growing Business</h2>
+                        <h2 class="title-project" lang="en">Growing Business</h2>
                         <p class="work-card">Приложение</p>
                     </a>
                 </li>
@@ -125,7 +127,7 @@
         </section>
     </main>
     <!--Футер-->
-    <footer>
+    <footer class="ftr-page>
         <a class="logo" href="">Web<span class="logo-word">Studio</span></a>
 
         <address class="location">г. Киев, пр-т Леси Украинки, 26
