--- a/portfolio.html
+++ b/portfolio.html
@@ -37,28 +37,31 @@
 
     <main class="main-content">
         <section class="gallery">
+            <div class="container">
             <!--Список кнопок сторінки Портфоліо-->
-            <ul class="list">
-                <li class="item">
+            <div class="filter">
+            <ul class="list list-filter">
+                <li class="item item-filter">
                     <button class="btn-filter btn-active" type="button">Все</button>
                 </li>
-                <li class="item">
+                <li class="item item-filter">
                     <button class="btn-filter" type="button">Веб-сайты</button>
                 </li>
-                <li class="item">
+                <li class="item item-filter">
                     <button class="btn-filter" type="button">Приложения</button>
                 </li>
-                <li class="item">
+                <li class="item item-filter">
                     <button class="btn-filter" type="button">Дизайн</button>
                 </li>
-                <li class="item">
+                <li class="item item-filter">
                     <button class="btn-filter" type="button">Маркетинг</button>
                 </li>
             </ul>
+        </div>
               <!--Карточки робіт Портфоліо-->
               <h1 class="title-portfolio">Галерея работ</h1>
-            <ul class="list">
-                <li class="item">
+            <ul class="list list-portfolio">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/tehno-kr.jpg" alt="Веб-сайт для компании Технокряк" 
                         width="370" height="294">
@@ -66,7 +69,7 @@
                         <p class="work-card">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/poster-new-orlean.jpg" alt="Дизайн постера New Orlean vs Golden Star"
                         width="370" height="294">
@@ -74,7 +77,7 @@
                         <p class="work-card">Дизайн</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/seafood.jpg" alt="Приложение для ресторана Seafood" 
                         width="370" height="294">
@@ -82,7 +85,7 @@
                         <p class="work-card">Приложение</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/project-prime.jpg" alt="Маркетинговый проект Prime" 
                         width="370" height="294">
@@ -90,7 +93,7 @@
                         <p class="work-card">Маркетинг</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/boxes.jpg" alt="Приложение компании Boxes" 
                         width="370" height="294">
@@ -98,7 +101,7 @@
                         <p class="work-card">Приложение</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/web-inspiration.jpg" alt="Веб-сайт компании Inspiration has no Borders"
                         width="370" height="294">
@@ -106,7 +109,7 @@
                         <p class="work-card">Веб-сайт</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/edition.jpg" alt="Дизайн для издания Издание Limited Edition" 
                         width="370" height="294">
@@ -114,7 +117,7 @@
                         <p class="work-card">Дизайн</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/lab.jpg" alt="Маркетинговый проект LAB" 
                         width="370" height="294">
@@ -122,7 +125,7 @@
                         <p class="work-card">Маркетинг</p>
                     </a>
                 </li>
-                <li class="item">
+                <li class="item item-portfolio">
                     <a class="link" href="">
                         <img src="./images/portfolio-img/growing-business.jpg" alt="Приложение Growing Business" 
                         width="370" height="294">
@@ -131,6 +134,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <!--Футер-->
