container: margin: 0 auto
Мінус padding-left + padding-right; margin: 0 auto!!!

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <main class="main-content">
         <!--Секція Герой-->
         <section class="hero">
-            <div class="container"></div>
-            <h1 class="title-hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button class="btn-hero" type="button">Заказать услугу</button>
+            <div class="container">
+                <h1 class="title-hero">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <button class="btn-hero" type="button">Заказать услугу</button>
             </div>
         </section>
         
