--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!--Секція Переваги-->
         <section class="benefits">
             <div class="container">
-                <h2 class="section-title">Преимущества</h2>
+                <h2 class="section-title visually-hidden">Преимущества</h2>
                 <ul class="list list-benefits">
                     <li class="item item-benefits">
                         <h3 class="title-benefits">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
