--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
-    rel="stylesheet">
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <!--Шапка сторінки-->
     <header class="header-page">
         <div class="container container-menu">
             <nav class="navigation">
                 <a class="logo logo-navigation" href="./index.html">Web<span class="logo-nav-word">Studio</span></a>
-    
+
                 <ul class="list menu-nav">
                     <li class="item item-nav"><a class="link-navigation" href="./">Студия</a></li>
-                    <li class="item item-nav"><a class="link-navigation current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item item-nav"><a class="link-navigation current" href="./portfolio.html">Портфолио</a>
+                    </li>
                     <li class="item item-nav"><a class="link-navigation" href="">Контакты</a></li>
                 </ul>
             </nav>
@@ -38,103 +42,121 @@
     <main class="main-content">
         <section class="gallery">
             <div class="container">
-            <!--Список кнопок сторінки Портфоліо-->
-            <div class="filter">
-            <ul class="list list-filter">
-                <li class="item item-filter">
-                    <button class="btn-filter btn-active" type="button">Все</button>
-                </li>
-                <li class="item item-filter">
-                    <button class="btn-filter" type="button">Веб-сайты</button>
-                </li>
-                <li class="item item-filter">
-                    <button class="btn-filter" type="button">Приложения</button>
-                </li>
-                <li class="item item-filter">
-                    <button class="btn-filter" type="button">Дизайн</button>
-                </li>
-                <li class="item item-filter">
-                    <button class="btn-filter" type="button">Маркетинг</button>
-                </li>
-            </ul>
-        </div>
-              <!--Карточки робіт Портфоліо-->
-              <h1 class="title-portfolio">Галерея работ</h1>
-            <ul class="list list-portfolio">
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/tehno-kr.jpg" alt="Веб-сайт для компании Технокряк" 
-                        width="370" height="294">
-                        <h2 class="title-project">Технокряк</h2>
-                        <p class="work-card">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/poster-new-orlean.jpg" alt="Дизайн постера New Orlean vs Golden Star"
-                        width="370" height="294">
-                        <h2 class="title-project">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="work-card">Дизайн</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/seafood.jpg" alt="Приложение для ресторана Seafood" 
-                        width="370" height="294">
-                        <h2 class="title-project">Ресторан <span lang="en">Seafood</span></h2>
-                        <p class="work-card">Приложение</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/project-prime.jpg" alt="Маркетинговый проект Prime" 
-                        width="370" height="294">
-                        <h2 class="title-project">Проект <span lang="en">Prime</span></h2>
-                        <p class="work-card">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/boxes.jpg" alt="Приложение компании Boxes" 
-                        width="370" height="294">
-                        <h2 class="title-project">Проект <span lang="en">Boxes</span></h2>
-                        <p class="work-card">Приложение</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/web-inspiration.jpg" alt="Веб-сайт компании Inspiration has no Borders"
-                        width="370" height="294">
-                        <h2 class="title-project" lang="en">Inspiration has no Borders</h2>
-                        <p class="work-card">Веб-сайт</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/edition.jpg" alt="Дизайн для издания Издание Limited Edition" 
-                        width="370" height="294">
-                        <h2 class="title-project">Издание <span lang="en">Limited Edition</span></h2>
-                        <p class="work-card">Дизайн</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/lab.jpg" alt="Маркетинговый проект LAB" 
-                        width="370" height="294">
-                        <h2 class="title-project">Проект <span lang="en">LAB</span></h2>
-                        <p class="work-card">Маркетинг</p>
-                    </a>
-                </li>
-                <li class="item item-portfolio">
-                    <a class="link" href="">
-                        <img src="./images/portfolio-img/growing-business.jpg" alt="Приложение Growing Business" 
-                        width="370" height="294">
-                        <h2 class="title-project" lang="en">Growing Business</h2>
-                        <p class="work-card">Приложение</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
+                <!--Список кнопок сторінки Портфоліо-->
+                <div class="filter">
+                    <ul class="list list-filter">
+                        <li class="item item-filter">
+                            <button class="btn-filter btn-active" type="button">Все</button>
+                        </li>
+                        <li class="item item-filter">
+                            <button class="btn-filter" type="button">Веб-сайты</button>
+                        </li>
+                        <li class="item item-filter">
+                            <button class="btn-filter" type="button">Приложения</button>
+                        </li>
+                        <li class="item item-filter">
+                            <button class="btn-filter" type="button">Дизайн</button>
+                        </li>
+                        <li class="item item-filter">
+                            <button class="btn-filter" type="button">Маркетинг</button>
+                        </li>
+                    </ul>
+                </div>
+                <!--Карточки робіт Портфоліо-->
+                <h1 class="title-portfolio visually-hidden">Галерея работ</h1>
+                <ul class="list list-portfolio">
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/tehno-kr.jpg" alt="Веб-сайт для компании Технокряк" width="370"
+                                height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Технокряк</h2>
+                                <p class="work-card">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/poster-new-orlean.jpg"
+                                alt="Дизайн постера New Orlean vs Golden Star" width="370" height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                                <p class="work-card">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/seafood.jpg" alt="Приложение для ресторана Seafood" width="370"
+                                height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Ресторан <span lang="en">Seafood</span></h2>
+                                <p class="work-card">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/project-prime.jpg" alt="Маркетинговый проект Prime" width="370"
+                                height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Проект <span lang="en">Prime</span></h2>
+                                <p class="work-card">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/boxes.jpg" alt="Приложение компании Boxes" width="370"
+                                height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Проект <span lang="en">Boxes</span></h2>
+                                <p class="work-card">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/web-inspiration.jpg"
+                                alt="Веб-сайт компании Inspiration has no Borders" width="370" height="294">
+                            <div class="card-description">
+                                <h2 class="title-project" lang="en">Inspiration has no Borders</h2>
+                                <p class="work-card">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/edition.jpg" alt="Дизайн для издания Издание Limited Edition"
+                                width="370" height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Издание <span lang="en">Limited Edition</span></h2>
+                                <p class="work-card">Дизайн</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/lab.jpg" alt="Маркетинговый проект LAB" width="370"
+                                height="294">
+                            <div class="card-description">
+                                <h2 class="title-project">Проект <span lang="en">LAB</span></h2>
+                                <p class="work-card">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item item-portfolio">
+                        <a class="link" href="">
+                            <img src="./images/portfolio-img/growing-business.jpg" alt="Приложение Growing Business"
+                                width="370" height="294">
+                            <div class="card-description">
+                                <h2 class="title-project" lang="en">Growing Business</h2>
+                                <p class="work-card">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!--Футер-->
@@ -148,6 +170,7 @@
             </div>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
